# 0bin

./: setup.cfg
zerobin/: default_settings.py  paste.py
zerobin/views/: 404.tpl  base.tpl  home.tpl  paste.tpl
